--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ margin-left: 15px;
 border-radius: 5px;
 padding-top: 10px;
 }
-.jotrney{width: 582px;
+.start{width: 582px;
     height: 279px;
+    padding-left: 15px;
 }
 button{
     color: #FFFFFF;
@@ -35,8 +36,8 @@ border-radius: 41px;
     grid-template-columns: repeat(2,1fr);
 }
 .intro img{ 
-    width: 440px;
-height: 414px;
+    width: 300px;
+height: 250px;
  } 
  /*-------- collection---------- */
  .main{
@@ -62,13 +63,66 @@ height: 414px;
  }
  .see{
      color:#E02C6D ;
-     display: flex;
-     align-items: center;
-     padding-left: 710px;
+     position: relative;
+     left: 700px;
  }
  footer{
-     background-color: rgb(3, 3, 44);
-     color: #FFFFFF;
-     padding-left: 500px;
+     background-color: #26148d;
+     text-align: center;
+    color: #FFFFFF;
  }
 
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+        padding-left: 0px;
+    }
+    header{
+        display:flex ;
+        justify-content: flex-start;
+        padding-left: 10px;
+    }
+    .intro, .collections  {
+        grid-template-columns: repeat(1,1fr);
+        justify-items: flex-start; 
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+      .start{
+            max-width: 200px; 
+            margin-bottom: 60px;
+            padding-bottom: 33px;
+      }
+      .collections{
+          height: 300px;
+          width: 500px;
+          padding-bottom: 0px;
+          margin-bottom: 0px;
+      }
+      .collection{ 
+          padding-bottom: 0px;
+          margin-bottom: 0px;
+          padding-top: 0px;
+          margin-top: 0px;
+      }
+      .collection img{
+        width: 300px;
+        height: 256px;
+      }
+      .main{
+          justify-content: flex-start;
+      }
+      .paragraph{
+          max-width: 200px;
+      }
+      .see{
+          justify-content: left;
+      }
+      footer{
+        position:fixed;
+        bottom: 0;
+        width: 300px;
+        height:250px;
+      }
+      
+    }
